--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,12 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password: root
 
 development:
   <<: *default
+  adapter: postgresql
   database: portfolio_development
 
   # The specified database role being used to connect to postgres.
@@ -57,6 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: postgresql
   database: portfolio_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -80,6 +84,6 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
   database: portfolio_production
-  username: portfolio
-  password: <%= ENV['PORTFOLIO_DATABASE_PASSWORD'] %>
+
